# thoughtpeer

./: DEEP.md  Dockerfile  Makefile  README.md  pyproject.toml  smoke_test.py
src/thoughtpeer/: __init__.py  main.py
src/thoughtpeer/api/: auth.py  entries.py  health.py  insights.py  peers.py
src/thoughtpeer/core/: config.py  database.py  deps.py
src/thoughtpeer/repositories/: entry_repo.py  insight_repo.py  peer_repo.py  user_repo.py
src/thoughtpeer/schemas/: entry.py  insight.py  peer.py  user.py
src/thoughtpeer/services/: ai_service.py  auth_service.py  entry_service.py  matching_service.py  peer_service.py  timeline_service.py
src/thoughtpeer/static/: index.html
tests/: test_matching.py
