[project]
name = "thoughtpeer"
version = "0.1.0"
description = "AI-powered journal with local LLM analysis and anonymous peer matching"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.28.0", "pytest>=8.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
