[project]
name = "thoughtpeer"
version = "0.3.0"
description = "AI-powered journal with LLM analysis and anonymous peer matching"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
